public/assets/css/main.css
/* ... */
.fc .fc-button-primary {
    background-color: transparent;
    border-color: transparent;
    color: black;
}

button.fc-customButton-button.fc-button.fc-button-primary {
    background: #0b5ed7;
    color: white;
}

button.fc-customButton-button.fc-button.fc-button-primary:hover {
    background: #0b5ed7;
    color: white;
}

.card1 {
    width: 270px !important;
    height: 262px;
}

.search-padding {
    padding-left: 7px !important;
}

.table-left-padding {
    padding-left: 10px !important;
}

.border-color {
    border: solid 2px #e9ebed !important;
}

.btn-nowrap {
    white-space: nowrap;
}

.nav-link span {
    max-width: 65px !important;
}

.stock {
    height: 350px !important;
    overflow-y: auto !important;
    overflow-x: hidden !important;
}

::-webkit-scrollbar {
    width: 3px;
}

/* Track */

::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Handle */

::-webkit-scrollbar-thumb {
    background: lightskyblue;
}

/* Handle on hover */

::-webkit-scrollbar-thumb:hover {
    background: lightskyblue;
}

.card-sm {
    max-width: 100%;
    margin: 0 auto;
}

upload_dropZone {
    color: #0f3c4b;
    background-color: white;
}

.upload_dropZone.highlight {
    background-color: var(--colorPrimaryEighth, #c8dadf);
}

.w-full {
    width: 100% !important;
}

.upload_svg {
    fill: var(--colorPrimaryNormal, #0576bd);
}

.btn-upload {
    color: #fff;
    background-color: var(--colorPrimaryNormal);
}

.btn-upload:hover,
.btn-upload:focus {
    color: #fff;
    background-color: var(--colorPrimaryGlare);
}

.upload_img {
    width: calc(33.333% - (2rem / 3));
    object-fit: contain;
}

.card-with-dash-border {
    border: 2px dashed blue !important;
}

.mid-msg {
    margin-top: 18px;
}

/* help support box */

.chat {
    position: relative;
    margin-left: 30px;
    margin-right: 30px;
    margin-bottom: 10rem;
    text-align: center;
    margin-top: 526px;
}

.tab-margin {
    position: relative;
    margin-bottom: -29rem !important;
}

.accordion-item {
    border: none !important;
}

.help-support {
    padding-bottom: 29px !important;
}

.accordion-button::after {
    content: none;
}

.accordion-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 90%;
}

.accord-h {
    padding-left: 2rem !important;
    font-size: 1.25rem !important;
}

ul.custom-square {
    list-style-type: square !important;
    color: black !important;
}

ul.custom-square li::marker {
    color: #0576bd;
    font-size: 29px;
}

.custom-square li div {
    display: flex;
    align-items: start;
}

.custom-square span {
    flex: 1;
    padding-right: 7px;
}

.custom-square li:last-child {
    background-color: white;
    color: black;
}

.custom-square input[type="time"] {
    width: 115px;
}

.date-input {
    width: 119px;
}

.m-g {
    margin-left: 11px;
}

.mx-auto-no-right {
    margin-right: 0 !important;
    margin-left: auto !important;
}

.for-btn-private {
    margin-right: 319px;
}

.btn-width {
    width: 8rem;
}

.btn-width-pay {
    width: 10rem;
}

.font-12 {
    font-size: 12px !important;
}

.font-14 {
    font-size: 14px !important;
}

.font-16 {
    font-size: 16px !important;
}

.font-16 {
    font-size: 16px !important;
}

.emergency-btn {
    color: #f03e41 !important;
}

.medium-btn {
    color: #ed9b32 !important;
}

.wd100 {
    width: 100px !important;
}

.processing-btn {
    border-color: #44b350 !important;
    color: #44b350 !important;
}

.todo-btn {
    border-color: #bfbfbf !important;
    color: #bfbfbf !important;
}

/* new css */

.select2-container {
    box-sizing: border-box;
    display: inline-block;
    margin: 0;
    position: relative;
    vertical-align: middle;
}

.select2-container .select2-selection--single {
    box-sizing: border-box;
    cursor: pointer;
    display: block;
    height: 28px;
    user-select: none;
    -webkit-user-select: none;
}

.select2-container .select2-selection--single .select2-selection__rendered {
    display: block;
    padding-left: 8px;
    padding-right: 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.select2-container .select2-selection--single .select2-selection__clear {
    background-color: transparent;
    border: none;
    font-size: 1em;
}

.select2-container[dir="rtl"]
    .select2-selection--single
    .select2-selection__rendered {
    padding-right: 8px;
    padding-left: 20px;
}

.select2-container .select2-selection--multiple {
    box-sizing: border-box;
    cursor: pointer;
    display: block;
    min-height: 32px;
    user-select: none;
    -webkit-user-select: none;
}

.select2-container .select2-selection--multiple .select2-selection__rendered {
    display: inline;
    list-style: none;
    padding: 0;
}

.select2-container .select2-selection--multiple .select2-selection__clear {
    background-color: transparent;
    border: none;
    font-size: 1em;
}

.select2-container .select2-search--inline .select2-search__field {
    box-sizing: border-box;
    border: none;
    font-size: 100%;
    margin-top: 5px;
    margin-left: 5px;
    padding: 0;
    max-width: 100%;
    resize: none;
    height: 18px;
    vertical-align: bottom;
    font-family: sans-serif;
    overflow: hidden;
    word-break: keep-all;
}

.select2-container
    .select2-search--inline
    .select2-search__field::-webkit-search-cancel-button {
    -webkit-appearance: none;
}

.select2-dropdown {
    background-color: white;
    border: 1px solid #aaa;
    border-radius: 4px;
    box-sizing: border-box;
    display: block;
    position: absolute;
    left: -100000px;
    width: 100%;
    z-index: 1051;
}

.select2-results {
    display: block;
}

.select2-results__options {
    list-style: none;
    margin: 0;
    padding: 0;
}

.select2-results__option {
    padding: 6px;
    user-select: none;
    -webkit-user-select: none;
}

.select2-results__option--selectable {
    cursor: pointer;
}
/* ... */

